# cost-tracking

./: .dockerignore  .gitignore  BUSINESS_PROCESS_DOCUMENTATION.md  Dockerfile  Generar_Reportes_ICBF.ps1  README.md  check_formulas.py  dashboard_v2.html  make.bat  pyproject.toml
.devcontainer/: devcontainer.json
bi/: Dashboard integrilidad 2026.pbix  base_theme.json
docs/: 01_consolidacion_regional.md  02_automatizacion_plantillas.md  03_extraccion_actas.md  04_censo_metaverso.md  05_cruce_secop_nit_bridge.md  06_dashboards_visualizacion.md  07_pipeline_metaverso_detallado.md  08_split_hcb_monitoreo.md  09_automatizacion_piloto_detallada.md  10_infraestructura_docker.md  11_estructura_datos.md  12_scripts_utilitarios.md  Propuesta Estratégica.docx
pilot_automation_v1/: ORQUESTADOR_PILOTO_ICBF.ipynb  generate_regional_matrices_integrales.py  generate_regional_templates.py  generate_regional_templates_com.py  generate_regional_templates_flexible.py  generate_regional_templates_xlwings.py  inject_notebook.py  update_notebook.py
scratch/: check_7_nulls.py  check_antioquia_additions.py  check_antioquia_analysis_cols.py  check_antioquia_output.py  check_antioquia_summary_full.py  check_antioquia_values.py  check_atlantico_regional.py  check_hcb_in_uds.py  check_hcb_nulls.py  check_hcb_servicios.py  check_integ_dupes.py  check_integ_fin.py  check_integrales.py  check_nit_source.py  check_non_empty.py  check_non_empty_zoni.py  check_norm_cols.py  check_output.py  check_regionals.py  check_santander_files.py  check_uds_hcb.py  convert_tolima.py  debug_nulls.py  (+32 more)
(+44 files in other folders)
